--- a/VirtoCommerce.Storefront/appsettings.json
+++ b/VirtoCommerce.Storefront/appsettings.json
@@ -59,5 +59,18 @@
     "SnapshotInLowPriorityThread": true,
     "ProvideAnonymousTelemetry": true,
     "FailedRequestLimit": 3
-  }
+  },
+  // Uncomment any of these services section to use corresponding SMS provider
+  //"SmsSenderOptions": {
+  //  "Twilio": {
+  //    "SMSAccountIdentification": "",
+  //    "SMSAccountPassword": "",
+  //    "SMSAccountFrom": ""
+  //  },
+  //  "ASPSMS": {
+  //    "SMSAccountIdentification": "",
+  //    "SMSAccountPassword": "",
+  //    "SMSAccountFrom": ""
+  //  }
+  //}
 }
