#212 SMS confirmation for reset password: - Reworked SMSOptions; - Added ability to reset password by SMS;

--- a/VirtoCommerce.Storefront/appsettings.json
+++ b/VirtoCommerce.Storefront/appsettings.json
@@ -25,6 +25,14 @@
     "AzureBlobStorage": {
       "PollForChanges": true,
       "ChangesPoolingInterval": "0:0:15"
+    },
+    "UseSmsForPasswordReset": false,
+    "SmsProvider": {
+      "SmsProviderType": "Twilio",
+      //"SmsProviderType": "ASPSMS",
+      "SmsAccountIdentification": "id",
+      "SmsAccountPassword": "pass",
+      "SmsAccountFrom": "sender"
     }
   },
   "CookieAuthenticationOptions": {
@@ -59,18 +67,5 @@
     "SnapshotInLowPriorityThread": true,
     "ProvideAnonymousTelemetry": true,
     "FailedRequestLimit": 3
-  },
-  // Uncomment any of these services section to use corresponding SMS provider
-  //"SmsSenderOptions": {
-  //  "Twilio": {
-  //    "SMSAccountIdentification": "",
-  //    "SMSAccountPassword": "",
-  //    "SMSAccountFrom": ""
-  //  },
-  //  "ASPSMS": {
-  //    "SMSAccountIdentification": "",
-  //    "SMSAccountPassword": "",
-  //    "SMSAccountFrom": ""
-  //  }
-  //}
+  }
 }
