#197 Add Two factor authentication to storefront API login workflow: - Used platform notification system for all notifications;

--- a/VirtoCommerce.Storefront/appsettings.json
+++ b/VirtoCommerce.Storefront/appsettings.json
@@ -26,14 +26,7 @@
       "PollForChanges": true,
       "ChangesPoolingInterval": "0:0:15"
     },
-    "UseSmsForPasswordReset": false,
-    "SmsProvider": {
-      "SmsProviderType": "Twilio",
-      //"SmsProviderType": "ASPSMS",
-      "SmsAccountIdentification": "id",
-      "SmsAccountPassword": "pass",
-      "SmsAccountFrom": "sender"
-    }
+    "UseSmsForPasswordReset": false
   },
   "CookieAuthenticationOptions": {
     "Cookie": {
