--- a/VirtoCommerce.Storefront/appsettings.json
+++ b/VirtoCommerce.Storefront/appsettings.json
@@ -26,7 +26,10 @@
       "PollForChanges": true,
       "ChangesPoolingInterval": "0:0:15"
     },
-    "UseSmsForPasswordReset": false
+    // This option sets how notification is delivered in reset password workflow. Possible values: "Email", "Phone".
+    "ResetPasswordNotificationGateway": "Email",
+    // This option sets how notification is delivered in two factor authentication workflow. Possible values: "Email", "Phone".
+    "TwoFactorAuthenticationNotificationGateway": "Phone"
   },
   "CookieAuthenticationOptions": {
     "Cookie": {
